syntax = "proto3";

package kopia.fs;
option go_package = "github.com/kopia/kopia/fs";

import "repo/objectid.proto";

message HashCacheEntry {
    string name = 1;
    fixed64 hash = 2;
    repo.ObjectID object_id = 3;
}
